# polynomial_kit

./: CMakeLists.txt  README.md  package.xml
include/polynomial_kit/: polynomial.hpp  visibility_control.h
src/polynomial_kit/: polynomial.cpp
